# my-little-claude

./: .gitignore  Cargo.toml  DEV_LOG.md  LICENSE  README.md  demo.cast
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/unripe-cli/: Cargo.toml
crates/unripe-cli/src/: main.rs
crates/unripe-core/: Cargo.toml
crates/unripe-core/src/: config.rs  lib.rs  message.rs  permission.rs  provider.rs  session.rs  tool.rs
crates/unripe-engine/: Cargo.toml
crates/unripe-engine/src/: bootstrap.rs  checkpoint.rs  engine.rs  lib.rs
crates/unripe-mcp/: Cargo.toml
crates/unripe-mcp/src/: bridge.rs  client.rs  config.rs  lib.rs
crates/unripe-providers/: Cargo.toml
crates/unripe-providers/src/: anthropic.rs  lib.rs  ollama.rs  openai.rs  sse.rs
crates/unripe-setup/: Cargo.toml  models.json
crates/unripe-setup/src/: download.rs  lib.rs  recommend.rs  sysinfo_detect.rs
crates/unripe-tools/: Cargo.toml
crates/unripe-tools/src/: bash.rs  edit_file.rs  glob.rs  grep.rs  lib.rs  read_file.rs  web_fetch.rs  web_search.rs  write_file.rs
scripts/: demo.sh  posts.md
