[package]
name = "unripe-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI binary for my-little-claude agent"

[[bin]]
name = "unripe"
path = "src/main.rs"

[dependencies]
unripe-core = { path = "../unripe-core" }
unripe-engine = { path = "../unripe-engine" }
unripe-mcp = { path = "../unripe-mcp" }
unripe-setup = { path = "../unripe-setup" }
unripe-providers = { path = "../unripe-providers" }
unripe-tools = { path = "../unripe-tools" }
anyhow.workspace = true
async-trait.workspace = true
clap.workspace = true
crossterm.workspace = true
serde_json.workspace = true
tokio.workspace = true
