[package]
name = "unripe-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core traits and types for the unripe-claude agent harness"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true
dirs.workspace = true
pin-project-lite.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
