[package]
name = "unripe-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) client for my-little-claude"

[dependencies]
unripe-core = { path = "../unripe-core" }
anyhow.workspace = true
async-trait.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
dirs.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
