[package]
name = "unripe-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "LLM provider implementations for unripe-claude"

[dependencies]
unripe-core = { path = "../unripe-core" }
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
bytes = "1"
