[package]
name = "unripe-setup"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "System detection and model onboarding for my-little-claude"

[dependencies]
unripe-core = { path = "../unripe-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
sysinfo = "0.35"
dirs.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
