[package]
name = "unripe-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Built-in tool implementations for my-little-claude"

[dependencies]
unripe-core = { path = "../unripe-core" }
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
glob = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
